--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="list"></div>
+    <!-- <div id="list"></div> -->
+    <div>
+      <h1>Quante Barzellette vuoi visualizzare?</h1>
+      <input id="inputUtente" type="number" />
+      <button id="btn">Press</button>
+    </div>
   </body>
 </html>
