--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   </head>
   <body>
     <!-- <div id="list"></div> -->
+    <!-- 
     <div>
       <h1>Quante Barzellette vuoi visualizzare?</h1>
       <input id="inputUtente" type="number" />
       <button id="btn">Press</button>
-    </div>
+    </div> -->
+    <input type="text" />
+    <button>Cerca</button>
   </body>
 </html>
